// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots DisplayWrappers|NavBar/LinkWrapper Standard 1`] = `
<div
  className="sc-bxivhb dGSKYG"
>
  <a
    className="sc-htpNat htswVG sc-bxivhb dGSKYG"
  >
    HOME
  </a>
  <a
    className="sc-htpNat htswVG sc-bxivhb dGSKYG"
  >
    CAUSES
  </a>
  <a
    className="sc-htpNat htswVG sc-bxivhb dGSKYG"
  >
    POSTS
  </a>
  <a
    className="sc-htpNat htswVG sc-bxivhb dGSKYG"
  >
    PROFILE
  </a>
</div>
`;

exports[`Storyshots DisplayWrappers|NavBar/LogoWrapper Standard 1`] = `
<div
  className="sc-EHOje keNvCO"
>
  <img
    className="sc-ifAKCX eytuCr"
  />
</div>
`;

exports[`Storyshots DisplayWrappers|NavBar/NavBar Standard 1`] = `
<div
  className="sc-fjdhpX eODbF"
>
  <div
    className="sc-bZQynM fhsJZP"
  >
    <div
      className="sc-EHOje keNvCO sc-bZQynM fhsJZP"
    >
      <img
        className="sc-ifAKCX eytuCr"
      />
    </div>
    <div
      className="sc-bxivhb dGSKYG sc-bZQynM fhsJZP"
    >
      <a
        className="sc-htpNat htswVG sc-bxivhb dGSKYG sc-bZQynM fhsJZP"
      >
        HOME
      </a>
      <a
        className="sc-htpNat htswVG sc-bxivhb dGSKYG sc-bZQynM fhsJZP"
      >
        CAUSES
      </a>
      <a
        className="sc-htpNat htswVG sc-bxivhb dGSKYG sc-bZQynM fhsJZP"
      >
        POSTS
      </a>
      <a
        className="sc-htpNat htswVG sc-bxivhb dGSKYG sc-bZQynM fhsJZP"
      >
        PROFILE
      </a>
    </div>
  </div>
  <div
    className="sc-bwzfXH ilzmva"
  >
    <input
      className="sc-bdVaJa bGHooc"
      placeholder="Search"
      placeholer="Search"
      type="text"
    />
  </div>
  <div
    className="sc-jTzLTM gwKHBW"
  >
    <div
      className="sc-htoDjs eEOuhl"
    >
      <button
        className="sc-gzVnrw ipSEb"
      >
        SIGN UP
      </button>
      <button
        className="sc-gzVnrw dIRfIe"
      >
        LOG IN
      </button>
    </div>
    <div
      className="sc-VigVT gIRLpX"
    >
      <div
        className="sc-gqjmRU jjqTqx"
      >
        <img
          className="sc-gZMcBi cnsilN"
        />
      </div>
      <div
        className="sc-iwsKbI dsGkdg"
      >
        <div
          className="sc-dnqmqq fSsTOJ"
        >
          James Wheeler
        </div>
        <div
          className="sc-dnqmqq lbjLpL"
        >
          larkin_tr***@yahoo.com
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots DisplayWrappers|NavBar/NavBarCentre C 1`] = `
<div
  className="sc-bwzfXH ilzmva"
>
  <input
    className="sc-bdVaJa bGHooc"
    placeholder="Search Causes"
    placeholer="Search Causes"
    type="text"
  />
</div>
`;

exports[`Storyshots DisplayWrappers|NavBar/NavBarCentre C&P 1`] = `
<div
  className="sc-bwzfXH ilzmva"
>
  <input
    className="sc-bdVaJa bGHooc"
    placeholder="Search Causes and Posts"
    placeholer="Search Causes and Posts"
    type="text"
  />
</div>
`;

exports[`Storyshots DisplayWrappers|NavBar/NavBarCentre P 1`] = `
<div
  className="sc-bwzfXH ilzmva"
>
  <input
    className="sc-bdVaJa bGHooc"
    placeholder="Search Posts"
    placeholer="Search Posts"
    type="text"
  />
</div>
`;

exports[`Storyshots DisplayWrappers|NavBar/NavBarCentre Standard 1`] = `
<div
  className="sc-bwzfXH ilzmva"
>
  <input
    className="sc-bdVaJa bGHooc"
    placeholder="Search"
    placeholer="Search"
    type="text"
  />
</div>
`;

exports[`Storyshots DisplayWrappers|NavBar/NavBarLeft Standard 1`] = `
<div
  className="sc-bZQynM fhsJZP"
>
  <div
    className="sc-EHOje keNvCO sc-bZQynM fhsJZP"
  >
    <img
      className="sc-ifAKCX eytuCr"
    />
  </div>
  <div
    className="sc-bxivhb dGSKYG sc-bZQynM fhsJZP"
  >
    <a
      className="sc-htpNat htswVG sc-bxivhb dGSKYG sc-bZQynM fhsJZP"
    >
      HOME
    </a>
    <a
      className="sc-htpNat htswVG sc-bxivhb dGSKYG sc-bZQynM fhsJZP"
    >
      CAUSES
    </a>
    <a
      className="sc-htpNat htswVG sc-bxivhb dGSKYG sc-bZQynM fhsJZP"
    >
      POSTS
    </a>
    <a
      className="sc-htpNat htswVG sc-bxivhb dGSKYG sc-bZQynM fhsJZP"
    >
      PROFILE
    </a>
  </div>
</div>
`;

exports[`Storyshots DisplayWrappers|NavBar/NavBarRight Standard 1`] = `
<div
  className="sc-jTzLTM gwKHBW"
>
  <div
    className="sc-htoDjs eEOuhl"
  >
    <button
      className="sc-gzVnrw ipSEb"
    >
      SIGN UP
    </button>
    <button
      className="sc-gzVnrw dIRfIe"
    >
      LOG IN
    </button>
  </div>
  <div
    className="sc-VigVT gIRLpX"
  >
    <div
      className="sc-gqjmRU jjqTqx"
    >
      <img
        className="sc-gZMcBi cnsilN"
      />
    </div>
    <div
      className="sc-iwsKbI dsGkdg"
    >
      <div
        className="sc-dnqmqq fSsTOJ"
      >
        James Wheeler
      </div>
      <div
        className="sc-dnqmqq lbjLpL"
      >
        larkin_tr***@yahoo.com
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots DisplayWrappers|NavBar/ProfileImageWrapper Standard 1`] = `
<div
  className="sc-gqjmRU jjqTqx"
>
  <img
    className="sc-gZMcBi cnsilN"
  />
</div>
`;

exports[`Storyshots DisplayWrappers|NavBar/ProfileInfoWrapper Standard 1`] = `
<div
  className="sc-iwsKbI dsGkdg"
>
  <div
    className="sc-dnqmqq fSsTOJ"
  >
    James Wheeler
  </div>
  <div
    className="sc-dnqmqq lbjLpL"
  >
    larkin_tr***@yahoo.com
  </div>
</div>
`;

exports[`Storyshots DisplayWrappers|NavBar/ProfileWrapper Standard 1`] = `
<div
  className="sc-VigVT gIRLpX"
>
  <div
    className="sc-gqjmRU jjqTqx"
  >
    <img
      className="sc-gZMcBi cnsilN"
    />
  </div>
  <div
    className="sc-iwsKbI dsGkdg"
  >
    <div
      className="sc-dnqmqq fSsTOJ"
    >
      James Wheeler
    </div>
    <div
      className="sc-dnqmqq lbjLpL"
    >
      larkin_tr***@yahoo.com
    </div>
  </div>
</div>
`;

exports[`Storyshots DisplayWrappers|NavBar/SignUpInButtonWrapper Standard 1`] = `
<div
  className="sc-htoDjs eEOuhl"
>
  <button
    className="sc-gzVnrw ipSEb"
  >
    SIGN UP
  </button>
  <button
    className="sc-gzVnrw dIRfIe"
  >
    LOG IN
  </button>
</div>
`;

exports[`Storyshots Primitive|/Buttons/ProfileInfoNavBar Login 1`] = `
<button
  className="sc-gzVnrw dIRfIe"
>
  LOG IN
</button>
`;

exports[`Storyshots Primitive|/Buttons/ProfileInfoNavBar SignUp 1`] = `
<button
  className="sc-gzVnrw ipSEb"
>
  SIGN UP
</button>
`;

exports[`Storyshots Primitive|/Buttons/ProfileInfoNavBar Standard 1`] = `
<button
  className="sc-gzVnrw dIRfIe"
/>
`;

exports[`Storyshots Primitive|/Text/ProfileInfoNavBar ProfileEmail 1`] = `
<div
  className="sc-dnqmqq dpCFyP"
>
  larkin_tr***@yahoo.com
</div>
`;

exports[`Storyshots Primitive|/Text/ProfileInfoNavBar ProfileName 1`] = `
<div
  className="sc-dnqmqq gHbHFA"
>
  James Wheeler
</div>
`;

exports[`Storyshots Primitive|/Text/ProfileInfoNavBar Standard 1`] = `
<div
  className="sc-dnqmqq iOUxaP"
>
  Standard
</div>
`;

exports[`Storyshots Primitive|Images/Logo Standard 1`] = `
<img
  className="sc-ifAKCX eytuCr"
/>
`;

exports[`Storyshots Primitive|Images/ProfileImage Standard 1`] = `
<img
  className="sc-gZMcBi cnsilN"
/>
`;

exports[`Storyshots Primitive|Inputs/SearchBar C 1`] = `
<input
  className="sc-bdVaJa bGHooc"
  placeholder="Search Causes"
  placeholer="Search Causes"
  type="text"
/>
`;

exports[`Storyshots Primitive|Inputs/SearchBar C&P 1`] = `
<input
  className="sc-bdVaJa bGHooc"
  placeholder="Search Causes and Posts"
  placeholer="Search Causes and Posts"
  type="text"
/>
`;

exports[`Storyshots Primitive|Inputs/SearchBar P 1`] = `
<input
  className="sc-bdVaJa bGHooc"
  placeholder="Search Posts"
  placeholer="Search Posts"
  type="text"
/>
`;

exports[`Storyshots Primitive|Inputs/SearchBar Standard 1`] = `
<input
  className="sc-bdVaJa bGHooc"
  placeholder="Search"
  placeholer="Search"
  type="text"
/>
`;

exports[`Storyshots Primitive|Links/LinkNavBar Causes 1`] = `
<a
  className="sc-htpNat htswVG"
>
  CAUSES
</a>
`;

exports[`Storyshots Primitive|Links/LinkNavBar Home 1`] = `
<a
  className="sc-htpNat htswVG"
>
  HOME
</a>
`;

exports[`Storyshots Primitive|Links/LinkNavBar Posts 1`] = `
<a
  className="sc-htpNat htswVG"
>
  POSTS
</a>
`;

exports[`Storyshots Primitive|Links/LinkNavBar Profile 1`] = `
<a
  className="sc-htpNat htswVG"
>
  PROFILE
</a>
`;

exports[`Storyshots Primitive|Links/LinkNavBar Standard 1`] = `
<a
  className="sc-htpNat htswVG"
>
  TEST
</a>
`;
